[package]
name = "proton_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced =  { git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor", features=["debug", "tokio", "highlighter"]}
iced = {features = ["debug", "tokio", "advanced"]}
thiserror = {}
rfd = "0.12.0"
octocrab = "0.32.0"
home = {}
tokio = {features = ["fs"]}
tokio-stream = {version = "0.1", features = ["fs"]}
futures = {}
futures-core = {}
reqwest = {version = "0.11.22", features = ["stream"]}
tempfile = {}
tar = {}
flate2 = {}
regex = {}
sha2 = {}
bytes = {features = ["std"]}
futures-util = {}
bytes-utils = {}